# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  +patches/busybox/1.7.4/1.7.4-static-error.diff:
  Add busybox patch to remove error about compiling statically

  11 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> alpha/busy-config,
  gen_compile.sh, ia64/busy-config, mips/busy-config, parisc/busy-config,
  parisc64/busy-config, ppc/busy-config, ppc64/busy-config,
  sparc/busy-config, sparc64/busy-config, x86/busy-config,
  x86_64/busy-config:
  Update busy-config files for the various arches for busybox 1.7.4

  11 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
  genkernel.conf, +patches/busybox/1.7.4/1.7.4-ash-timeout.diff,
  +patches/busybox/1.7.4/1.7.4-mdadm.diff,
  +patches/busybox/1.7.4/1.7.4-mdstart.diff,
  +patches/busybox/1.7.4/1.7.4-openvt.diff:
  Add apply_patches() function to automagically apply patches for a given util
  Add updated busybox patches for 1.7.4 from robbat2
  Change BUSYBOX_VER to 1.7.4

  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Rearrange checks so the return value is read correctly.

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> alpha/busy-config,
  gen_initrd.sh, generic/initrd.scripts, generic/linuxrc, ia64/busy-config,
  mips/busy-config, parisc/busy-config, parisc64/busy-config,
  ppc/busy-config, ppc64/busy-config, sparc/busy-config,
  sparc64/busy-config, um/busy-config, x86/busy-config, x86_64/busy-config:
  Enable CONFIG_HEXDUMP globally for busybox
  Add getdvhoff replacement function from vapier
  Remove copying of getdvhoff from system

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, genkernel.conf:
  Add support for --firmware-files option to make robbat2 happy

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, genkernel.conf: